--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     tools:context=".ui.MainActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/forecast_list"
+        android:id="@+id/foreCastList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
